--- a/src/app/gantt/gantt.component.html
+++ b/src/app/gantt/gantt.component.html
@@ -16,4 +16,6 @@
     [tbar]                    = "ganttProps.tbar"
     [dependencyIdField]       = "ganttProps.dependencyIdField"
     [timeRangesFeature]       = "ganttProps.timeRangesFeature"
+    [cellEditFeature]         = "ganttProps.cellEditFeature"
+    [rowReorderFeature]       = "ganttProps.rowReorderFeature"  
 ></bryntum-gantt>
